Databse integrated and auth done

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 AUTH_SECRET=""
 RESEND_API_KEY=re_XFTYsn5q_BV7Mix4kqsBUyLd7qdopAmJx
-MONGODB_URI="" //paste your own url here
+MONGODB_URI=mongodb+srv://stichmasterfyp:13cZhuX8AE6kUsw3@fyp.eccvh.mongodb.net/?retryWrites=true&w=majority&appName=FYP
 TOKEN_PRIVATE_KEY=asd123321dsa
 NEXTAUTH_SECRET="he"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dnrktvlmy
